--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,8 @@
-[workspace.lints.rust]
-unsafe_code = "forbid"
-# unused = "allow" # For experimental dev.
+[package]
+name = "some-app"
+version = "0.1.0"
+edition = "2021"
 
-[workspace]
-resolver = "2"
-members = [
-    "crates/ai-buddy", # The core/main library used by ai-buddy-cli
-    "crates/ai-buddy-cli", # The CLI for ai-buddy  
-    "crates/ai-buddy-app", # (Upcoming) Tauri App
-]
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[dependencies]
